Table roles {
  id integer [primary key]
  name varchar(64)
  description varchar(512)
}

Table users {
  id integer            [primary key]
  username varchar(255) [unique]
  email varchar(255)    [unique]
  password text
  is_verified bool      [default: false]
  is_private bool       [default: false]
  role integer          [ref: - roles.id, not null]
  profile integer       [ref: - profiles.id, not null]
  created_at timestamp 
  updated_at timestamp

  indexes {
    email
    role
    created_at
  }
}

Table profiles {
  id integer            [primary key]
  fullname varchar(255)
  bio text
  avatar integer        [ref: - files.id]
  updated_at timestamp
}

Table files {
  id integer            [primary key]
  filename varchar(255) 
  filepath text
  size_bytes integer
  creator integer       [ref: > users.id]
  created_at timestamp 

  indexes {
    creator
  }
}

Table tags {
  id integer        [primary key]
  name varchar(255) [unique]
  created_at timestamp 
}

Table posts {
  id integer        [primary key]
  description text
  creator integer   [ref: > users.id]
  created_at timestamp 
  updated_at timestamp

  indexes {
    creator
  }
}

Table posts_files {
  id integer    [primary key]
  file integer  [ref: > files.id]
  post integer  [ref: > posts.id]

  indexes {
    posts
    files
  }

  // primary key: posts, files
}

Table posts_tags {
  id integer    [primary key]
  post integer  [ref: > posts.id]
  tag integer   [ref: > tags.id]

  indexes {
    posts
    tags
  }

  // primary key: tag, file
}

Table comments {
  id integer              [primary key]
  post integer            [ref: > posts.id]
  parent_comment integer  [ref: < comments.id]
  content varchar(2048)   [not null]
  created_at timestamp 
  updated_at timestamp

  indexes {
    post
    parent_comment
  }
}

Table likes {
  id integer [primary key]
  post integer [ref: > posts.id]
  user integer [ref: > users.id]
  created_at timestamp 

  indexes {
    post
    user
  }
}

Table follows {
  id          integer [primary key]
  follower    integer [ref: > users.id]
  following   integer [ref: > users.id]
  created_at  timestamp 

  indexes {
    following
    follower
  }
}

Enum report_reason {
  Adult_content
  Racist_content
  other
}

Table reports {
  id              integer [primary key]
  creator         integer [ref: > users.id]
  post            integer [ref: > posts.id, not null]
  parent_comment  integer [ref: > comments.id]
  reason          report_reason
  content         text
  created_at      timestamp 
}


